chore: remove obsolete references to seed node